--- a/src/styles.css
+++ b/src/styles.css
@@ -180,3 +180,10 @@ a {
 }
 
 
+@media only screen and (min-width: 600px) {
+}
+@media only screen and (min-width: 768px) {
+   }
+@media only screen and (max-width: 425px){
+
+}
