commit on 'main'

--- a/src/styles.css
+++ b/src/styles.css
@@ -180,10 +180,20 @@ a {
 }
 
 
-@media only screen and (min-width: 600px) {
-}
-@media only screen and (min-width: 768px) {
-   }
-@media only screen and (max-width: 425px){
 
+
+
+@media (min-width: 576px) {
+}
+
+
+@media (min-width: 768px) {
+}
+
+
+@media (min-width: 992px) {
+}
+
+
+@media (min-width: 1200px) {
 }
