--- a/src/styles.css
+++ b/src/styles.css
@@ -183,15 +183,20 @@ a {
 
 
 
-@media (min-width: 576px) {
+
+@media (max-width: 575.98px) {
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 576px) and (max-width: 767.98px) {
 }
 
 
-@media (min-width: 992px) {
+@media (min-width: 768px) and (max-width: 991.98px) {
+}
+
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
 }
 
 
