--- a/src/styles.css
+++ b/src/styles.css
@@ -145,7 +145,12 @@ p {
     justify-content: space-around;
 }
 
-
+@media only screen and (max-width: 1000px) {
+    .project-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
 
 .project-image {
     margin-top: 25px;
